<resources>
    <string name="app_name">IntermittentFasting</string>
    <string name="timer_fragment_title">Timer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Settings</string>
    <string name="start_fasting_timer">Start fasting timer!</string>
    <string name="zero_time" translatable="false">00:00:00</string>
    <string name="start_eating_timer">Start eating timer</string>
    <string name="its_fasting_time_message">Fasting in progress</string>
    <string name="timer_channel_description">Timer channel</string>
    <string name="congratulations_channel_description">congratulations channel</string>
    <string name="fasting_time_message">time to be hungry</string>
    <string name="eating_time_message">Time to eat</string>
    <string name="congratulations_3_message">Congratulations, you keep more, than 12 hours!</string>
    <string name="congratulations_1_message">Congratulations, you keep more, than 16 hours!</string>
    <string name="congratulations_2_message">Congratulations, you keep more, than 14 hours!</string>
    <string name="its_eating_time_message">Eating time</string>
    <string name="still_fasting_message">You just start fasting</string>
    <string name="still_eating_message">You just start eat</string>
    <string name="you_fasting_message">"You hungry "</string>
    <string name="you_eating_message">"You eat "</string>
    <string name="start_eat_message">Eating</string>
    <string name="start_fasting_message">Fasting</string>
    <string name="statistics_message">Statistics</string>
    <string name="fasting_timing_message">You hungry by</string>
    <string name="eating_timing_message">You eat by</string>
    <string name="period_finish_message">Switch period</string>
    <string name="last_eat_time_message">Last you eat: %s ago</string>
    <string name="i_eat_message">I eat</string>
    <string name="i_drink_message">I drink</string>
    <string name="last_drink_time_message">Last you drink: %s ago</string>
    <string name="fasting_stat_message">Fasting chart</string>
    <string name="chart_for_day_message">Chart for day</string>
    <string name="fasting_time_chart">You fasting time is %s (%d%%)</string>
    <string name="time_format">%02d h %02d m %02d s</string>
    <string name="eating_time_chart" >You eating time is %s (%d%%)</string>
    <string name="total_eats">Total eats per day: %d</string>
    <string name="total_drinks">Total drinks per day: %d</string>
    <string name="you_eat_congrat">Congratulations, you are eat</string>
    <string name="you_drink_congrat">Congratulations, you are drink</string>
</resources>
