<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.veldor.intermittentfasting.ui.home.TimerFragment"
        android:label="@string/timer_fragment_title"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="net.veldor.intermittentfasting.ui.chart.ChartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="net.veldor.intermittentfasting.ui.notifications.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
